2007-10-11  Emilio Meschi <emilio.meschi@cern.ch>

	* tag V00-02-00
	* reorganize to single class plugin
	* added method setFreeToEof to support stopping playback

2007-04-19  Emilio Meschi <emilio.meschi@cern.ch>

	* tag V00-01-00
	* reorganize for new plugin manager
	
2007-03-27  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-00-07
	* change parameter name to 'queueSize'
	* change queueSize default to 32

2006-11-28  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-00-06
	* preload events from file into a queue. the size of the queue
	(parameter 'QueueSize') is 128 by default.

2006-11-14  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-00-04
	* add ';' after DEFINE_FWK_MODULE for slc4/gcc3.4.5 compliance

2006-10-10  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-00-03
	* fix the BuildFile, requested by Shahzad Muzaffar

2006-09-27  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-00-02
	* add test/playback.cfg: this is an example configuration to be
	passed to the FUEventProcessor which is running in the executive
	of the AutoBU to serve the events from storage (file name needs to
	be adjusted)

2006-09-26  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-00-01
	* first import to cvs
	* PlaybackRawDataProvider is an EDAnalyzer to be run in a
	FUEventProcessor (see EventFilter/Processor). It will read the
	FEDRawDataCollection from one event and wait until the collection
	was picked up before retrieving the next. The client to pick up
	those collections is BU (see EventFilter/AutoBU). The data will be
	provided to the Filter Farm code as if coming from the builder
	unit(s) online.
